--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <!DOCTYPE html>
  <html>
+  <head>
+   <meta charset="utf-8">
+   <title>DB-Tippspiel</title>
+  </head>
+  <body>
+   <p style="text-align:center; margin:auto;">Website incoming!</p>
+  </body>
  </html>
