--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
    <title>DB-Tippspiel</title>
   </head>
   <body>
-   <p style="text-align:center; margin:auto;">Website incoming!</p>
+   <p style="text-align:center; margin-top:100px;">Website incoming!</p>
   </body>
  </html>
